--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -8,14 +8,15 @@
             </div>
             <div class="container">
                 <div class="section-title center-align big-title">
-                    <h2><span>Our Contacts</span></h2>
-                    <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut nec tincidunt arcu, sit amet fermentum sem.</h4>
+                    <h2><span>Notre contact</span></h2>
+                    <h4>Améliorez la gestion de votre petite structure d'hébergement
+                        avec HOME, la solution tout-en-un pour vos gîtes, maison d'hôtes.</h4>
                 </div>
                 <div class="scroll-down-wrap">
                     <div class="mousey">
                         <div class="scroller"></div>
                     </div>
-                    <span>Scroll Down To Discover</span>
+                    <span>Faites défiler vers le bas pour découvrir</span>
                 </div>
             </div>
         </section>
@@ -24,10 +25,10 @@
         <div class="breadcrumbs fw-breadcrumbs sp-brd fl-wrap">
             <div class="container">
                 <div class="breadcrumbs-list">
-                    <a href="#">Home</a> <span>Contacts</span>
+                    <a href="#">Accueil</a> <span>Contact</span>
                 </div>
                 <div class="share-holder hid-share">
-                    <a href="#" class="share-btn showshare sfcs">  <i class="fas fa-share-alt"></i>  Share   </a>
+                    <a href="#" class="share-btn showshare sfcs">  <i class="fas fa-share-alt"></i>Partager</a>
                     <div class="share-container  isShare"></div>
                 </div>
             </div>
@@ -41,9 +42,8 @@
                     <div class="col-md-4">
                         <div class="services-item fl-wrap">
                             <i class="fal fa-envelope"></i>
-                            <h4>Our Mails <span>01</span></h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
-                            <a href="#" class="serv-link sl-b">yourmail@domain.com</a>
+                            <h4>Notre mail <span>01</span></h4>
+                            <a href="#" class="serv-link sl-b">contact@home.com</a>
                         </div>
                     </div>
                     <!-- services-item  end-->
@@ -51,9 +51,8 @@
                     <div class="col-md-4">
                         <div class="services-item fl-wrap">
                             <i class="fal fa-phone-rotary"></i>
-                            <h4>Our Phones<span>02</span></h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
-                            <a href="#" class="serv-link sl-b">+7(111)123456789</a>
+                            <h4> Nos téléphones<span>02</span></h4>
+                            <a href="#" class="serv-link sl-b">+216 54054026</a>
                         </div>
                     </div>
                     <!-- services-item  end-->
@@ -61,9 +60,8 @@
                     <div class="col-md-4">
                         <div class="services-item fl-wrap">
                             <i class="fal fa-map-marked"></i>
-                            <h4>Our Adress <span>03</span></h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
-                            <a href="#" class="serv-link sl-b">USA 27TH Brooklyn NY</a>
+                            <h4>Notre adresse  <span>03</span></h4>
+                            <a href="#" class="serv-link sl-b">Centre urbain nord Tunis</a>
                         </div>
                     </div>
                     <!-- services-item  end-->								
@@ -71,7 +69,8 @@
                 <div class="clearfix"></div>
                 <div class="contacts-opt fl-wrap">
                     <div class="contact-social">
-                        <span class="cs-title">Find us on: </span>
+                        <span class="cs-title">Trouvez-nous sur 
+                        </span>
                         <ul>
                             <li><a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
                             <li><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
@@ -79,8 +78,8 @@
                             <li><a href="#" target="_blank"><i class="fab fa-vk"></i></a></li>
                         </ul>
                     </div>
-                    <a href="#" class="btn small-btn float-btn color-bg cf_btn">Write Mesagge</a>
-                    <div class="contact-notifer">Or visit our <a href="help.html">  help page</a></div>
+                    <a href="#" class="btn small-btn float-btn color-bg cf_btn">Ecrire un message</a>
+                    <div class="contact-notifer">Ou visiter notre  <a href="help.html">  help page</a></div>
                 </div>
                 <!--box-widget  -->			
                       <div class="contact-form-wrap">
@@ -115,41 +114,12 @@
         <!-- section end-->	
     </div>
     <!-- content end -->	
-    <!-- subscribe-wrap -->	
-    <div class="subscribe-wrap fl-wrap">
-        <div class="container">
-            <div class="subscribe-container fl-wrap color-bg">
-                <div class="pwh_bg"></div>
-                <div class="mrb_dec mrb_dec3"></div>
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="subscribe-header">
-                            <h4>newsletter</h4>
-                            <h3>Sign up for newsletter and get latest news and update</h3>
-                        </div>
-                    </div>
-                    <div class="col-md-1"></div>
-                    <div class="col-md-5">
-                        <div class="footer-widget fl-wrap">
-                            <div class="subscribe-widget fl-wrap">
-                                <div class="subcribe-form">
-                                    <form id="subscribe">
-                                        <input class="enteremail fl-wrap" name="email" id="subscribe-email" placeholder="Enter Your Email" spellcheck="false" type="text">
-                                        <button type="submit" id="subscribe-button" class="subscribe-button color-bg">  Subscribe</button>
-                                        <label for="subscribe-email" class="subscribe-message"></label>
-                                    </form>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- subscribe-wrap end -->	
+
     <!-- footer -->	
     
     <!-- footer end -->
 </div>
         <!--contact-form-wrap -->	
  	
+
+<!-- <app-why-choose></app-why-choose>         -->
