--- a/src/app/latout/header/header.component.html
+++ b/src/app/latout/header/header.component.html
@@ -17,7 +17,7 @@
     <!-- header-search button end  -->
     <!--  add new  btn -->
     <div class="add-list_wrap">
-        <a href="dashboard-add-listing.html" class="add-list color-bg"><i class="fal fa-plus"></i> <span>Devenir Hote</span></a>
+        <a routerLink="/dashboard-pro" class="add-list color-bg"><i class="fal fa-plus"></i> <span>Devenir Hote</span></a>
     </div>
     <!--  add new  btn end -->
     <!--  header-opt_btn -->
@@ -30,7 +30,7 @@
     </div>
     <!--  cart-btn end -->
     <!--  login btn -->
-    <div class="show-reg-form modal-open"><i class="fas fa-user"></i><span>Se connecter</span></div>
+    <div class="show-reg-form modal-open" ><i class="fas fa-user" ></i><span routerLink="/user/login">Se connecter</span></div>
     <!--  login btn  end -->
     <!--  navigation --> 
     <div class="nav-holder main-menu">
@@ -84,7 +84,7 @@
     <!--wishlist-wrap end -->                            
 
 </header>
-<app-signin></app-signin>
+
 <!-- <app-notification></app-notification> -->
 
 <div class="secondary-nav">
