--- a/src/app/blog-page/blog-page.component.html
+++ b/src/app/blog-page/blog-page.component.html
@@ -8,14 +8,14 @@
             </div>
             <div class="container">
                 <div class="section-title center-align big-title">
-                    <h2><span>Our last News</span></h2>
+                    <h2><span>Nos dernières nouvelles</span></h2>
                     <!-- <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut nec tincidunt arcu, sit amet fermentum sem.</h4> -->
                 </div>
                 <div class="scroll-down-wrap">
                     <div class="mousey">
                         <div class="scroller"></div>
                     </div>
-                    <span>Scroll Down To Discover</span>
+                    <span>Faites défiler vers le bas pour découvrir</span>
                 </div>
             </div>
         </section>
@@ -24,7 +24,7 @@
         <div class="breadcrumbs fw-breadcrumbs sp-brd fl-wrap">
             <div class="container">
                 <div class="breadcrumbs-list">
-                    <a href="#">Home</a> <span>Blog</span>
+                    <a href="#">Accueil</a> <span>Blog</span>
                 </div>
                 <div class="share-holder hid-share">
                     <a href="#" class="share-btn showshare sfcs">  <i class="fas fa-share-alt"></i>  Share   </a>
@@ -47,24 +47,24 @@
                                             <!--  slick-slide-item -->
                                             <div class="slick-slide-item">
                                                 <div class="box-item">
-                                                    <a href="assets/images/all/blog/1.jpg" class="gal-link popup-image"><i class="fal fa-search"  ></i></a>
-                                                    <img src="assets/images/all/blog/1.jpg" alt="">
+                                                    <a href="assets/images/agency/agent/blog.png" class="gal-link popup-image"><i class="fal fa-search"  ></i></a>
+                                                    <img src="assets/images/agency/agent/blog.png" alt="">
                                                 </div>
                                             </div>
                                             <!--  slick-slide-item end -->
                                             <!--  slick-slide-item -->
                                             <div class="slick-slide-item">
                                                 <div class="box-item">
-                                                    <a href="assets/images/all/blog/2.jpg" class="gal-link popup-image"><i class="fal fa-search"  ></i></a>
-                                                    <img src="assets/images/all/blog/2.jpg" alt="">
+                                                    <a href="assets/images/agency/agent/blog2.png" class="gal-link popup-image"><i class="fal fa-search"  ></i></a>
+                                                    <img src="assets/images/agency/agent/blog2.png" alt="">
                                                 </div>
                                             </div>
                                             <!--  slick-slide-item end -->
                                             <!--  slick-slide-item -->
                                             <div class="slick-slide-item">
                                                 <div class="box-item">
-                                                    <a href="assets/images/all/blog/3.jpg" class="gal-link popup-image"><i class="fal fa-search"  ></i></a>
-                                                    <img src="assets/images/all/blog/3.jpg" alt="">
+                                                    <a href="assets/images/agency/agent/blog1.png" class="gal-link popup-image"><i class="fal fa-search"  ></i></a>
+                                                    <img src="assets/images/agency/agent/blog1.png" alt="">
                                                 </div>
                                             </div>
                                             <!--  slick-slide-item end -->
@@ -86,14 +86,14 @@
                                             <li><i class="fal fa-tags"></i> <a href="#">Shop</a> , <a href="#">Hotels</a> </li>
                                         </ul>
                                     </div>
-                                    <a href="blog-single.html" class="btn color-bg float-btn small-btn">Read more</a>
+                                    <a href="blog-single.html" class="btn color-bg float-btn small-btn">Lire la suite </a>
                                 </div>
                             </article>
                             <!-- article end --> 						
                             <!-- article> --> 
                             <article class="post-article fl-wrap">
                                 <div class="list-single-main-media fl-wrap">
-                                    <img src="assets/images/all/blog/4.jpg" class="respimg" alt="">
+                                    <img src="assets/images/all/blog/blog1.png" class="respimg" alt="">
                                 </div>
                                 <div class="list-single-main-item fl-wrap block_box">
                                     <h2 class="post-opt-title"><a href="blog-single.html">How to choose the right Agent.</a></h2>
@@ -200,53 +200,7 @@
                                     <!-- widget-posts end-->                                                        
                                 </div>
                             </div>
-                            <!--box-widget end --> 
-                            <!--box-widget-->
-                            <!-- <div class="box-widget fl-wrap">
-                                <div class="box-widget-title fl-wrap">Categories</div>
-                                <div class="box-widget-content fl-wrap">
-                                    <ul class="cat-item no-list-style">
-                                        <li><a href="#">Standard</a> <span>3</span></li>
-                                        <li><a href="#">Video</a> <span>6 </span></li>
-                                        <li><a href="#">Gallery</a> <span>12 </span></li>
-                                        <li><a href="#">Quotes</a> <span>4</span></li>
-                                    </ul>
-                                </div>
-                            </div> -->
-                            <!--box-widget end -->									
-                            <!--box-widget-->
-                            <div class="box-widget fl-wrap">
-                                <div class="banner-widget fl-wrap">
-                                    <div class="bg-wrap bg-parallax-wrap-gradien">
-                                        <div class="bg  "  data-bg="assets/images/all/blog/1.jpg"></div>
-                                    </div>
-                                    <div class="banner-widget_content">
-                                        <h5>Do you want to join our real estate network?</h5>
-                                        <a href="#" class="btn float-btn color-bg small-btn">Become an Agent</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <!--box-widget end --> 									
-                            <!--box-widget-->
-                            <div class="box-widget fl-wrap">
-                                <div class="box-widget-title fl-wrap">Tags</div>
-                                <div class="box-widget-content fl-wrap">
-                                    <!--tags-->
-                                    <div class="list-single-tags fl-wrap tags-stylwrap" style="margin-top: 20px;">
-                                        <a href="#">Hotel</a>
-                                        <a href="#">Hostel</a>
-                                        <a href="#">Room</a>
-                                        <a href="#">Spa</a>
-                                        <a href="#">Restourant</a>
-                                        <a href="#">Parking</a>    
-                                    </div>
-                                    <!--tags end-->                                                        
-                                </div>
-                            </div>
-                            <!--box-widget end --> 									
-                            <!--box-widget-->
-                           
-                            <!--box-widget end -->									
+                         									
                         </div>
                         <!-- sidebar end-->								
                     </div>
@@ -256,37 +210,6 @@
         <div class="limit-box fl-wrap"></div>
     </div>
     <!-- content end -->	
-    <!-- subscribe-wrap -->	
-    <div class="subscribe-wrap fl-wrap">
-        <div class="container">
-            <div class="subscribe-container fl-wrap color-bg">
-                <div class="pwh_bg"></div>
-                <div class="mrb_dec mrb_dec3"></div>
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="subscribe-header">
-                            <h4>newsletter</h4>
-                            <h3>Sign up for newsletter and get latest news and update</h3>
-                        </div>
-                    </div>
-                    <div class="col-md-1"></div>
-                    <div class="col-md-5">
-                        <div class="footer-widget fl-wrap">
-                            <div class="subscribe-widget fl-wrap">
-                                <div class="subcribe-form">
-                                    <form id="subscribe">
-                                        <input class="enteremail fl-wrap" name="email" id="subscribe-email" placeholder="Enter Your Email" spellcheck="false" type="text">
-                                        <button type="submit" id="subscribe-button" class="subscribe-button color-bg">  Subscribe</button>
-                                        <label for="subscribe-email" class="subscribe-message"></label>
-                                    </form>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- subscribe-wrap end -->	
+
 
 </div>
